refactor(repo): add crud methods for organizer and attendee